[ Change version ] 15.21.1 [ G3 with theme.json ] Fixed the alignment issue of the title in the post editing screen.

--- a/_g3/assets/_scss/block/_block_editor.scss
+++ b/_g3/assets/_scss/block/_block_editor.scss
@@ -1,4 +1,9 @@
 // editor only
+
+.editor-post-title { // Attend to 6.5 with theme.json
+	margin-left:auto;
+	margin-right:auto;
+}
 .edit-post-visual-editor .editor-styles-wrapper {
 	.wp-block-table {
 		thead {
